fix dark mode

--- a/Workspace/App/client/src/Components/Schedule/Schedule.module.css
+++ b/Workspace/App/client/src/Components/Schedule/Schedule.module.css
@@ -15,12 +15,20 @@
   --text-dark: #000000;
   --text-light: #ffffff;
   --header: #7a1a08;
+  --bg-today: rgba(141, 237, 254, 0.2);
+  --toolbar-color: #ffcf7d;
 }
 [data-theme='dark'] {
   --background-color: #23272f; 
   --text-dark: #ffffff; 
   --text-light: #000000;
   --toolbar-text-color: #ffc821;
+  --bg-today: rgba(233, 252, 255, 0.4);
+  --toolbar-color: #c1c0ba;
+  --header: #ffc821;
+  --green-color: #00ad09;
+  --gray-color: #c1c0ba;
+  --primary-color-hover: #848383;
 }
 
 
@@ -35,8 +43,8 @@
 }
 
 :global(.rbc-toolbar button) {
-  background-color: var(--primary-color) !important;
-  color: var(--text-light) !important;
+  background-color: var(--toolbar-color) !important;
+  color: white !important;
   border: none !important;
   padding: 8px 12px !important;
   border-radius: 8px !important;
@@ -61,7 +69,7 @@
 
 :global(.rbc-toolbar-label) {
   font-weight: bold;
-  color: var(--text-dark) !important;
+  color: var(--header) !important;
 }
 
 :global(.rbc-event) {
@@ -93,6 +101,35 @@
 :global(.rbc-calendar) {
   width: 100% !important;
 }
+
+:global(.rbc-time-content) {
+  color: var(--text-dark); 
+  font-family: "Montserrat", sans-serif;
+}
+:global(.rbc-today) {
+  background-color: var(--bg-today) !important;
+}
+:global(.rbc-calendar .rbc-header) {
+  color: var(--text-dark) !important;
+}
+:global(.rbc-off-range-bg) {
+  background-color: #8d8b8b59 !important;  /* Nền ô */
+}
+:global(.rbc-off-range) {
+  color: #999 !important;  /* Màu chữ */
+}
+:global(.rbc-month-view .rbc-date-cell) {
+  color: var(--text-dark);
+  font-weight: 600;
+}
+:global(.rbc-show-more) {
+  color: var(--text-dark) !important;
+  background-color: transparent !important;
+  border-radius: 8px !important;
+  padding: 5px !important;
+  font-size: 12px !important;
+}
+
 
 .add_event {
   display: flex;
@@ -376,6 +413,7 @@
 
   :global(.rbc-header span) {
     font-size: 9.5px !important;
+    color: var(--text-dark) !important;
   }
 
   :global(.rbc-allday-cell) {
