--- a/Workspace/App/client/src/index.css
+++ b/Workspace/App/client/src/index.css
@@ -26,10 +26,7 @@ img {
     --background-color: #ffffff; /* Màu nền sáng */
     --text-color: #000000; /* Màu chữ sáng */
 }
-[data-theme='dark'] {
-    --background-color: #23272f; /* Màu nền tối */
-    --text-color: #ffffff; /* Màu chữ tối */
-}
+
 body {
     background-color: var(--background-color);
     color: var(--text-color);
